# showpulse

./: .env  .gitignore  CLAUDE.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  LICENSE  NEXT_IMPLEMENTATION_PLAN.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  SECURITY_REVIEW.md  gen-rihanna-full.py  gen-rihanna.py  package-lock.json  rihanna-cuesheet.csv  rihanna-show.json  setup-users.sh  test-import-cues.csv  test-import-show.json
branding/: build-logos.py
data/: showpulse.db-shm  showpulse.db-wal
scripts/: test-network.sh
src/: auth.rs  config.rs  lib.rs  main.rs
src/api/: acts.rs  admin.rs  crew.rs  cues.rs  departments.rs  generator.rs  ltc.rs  mod.rs  mtc.rs  qr.rs  show.rs  timecode.rs  timer_lock.rs  users.rs
src/cue/: store.rs  types.rs
src/engine/: countdown.rs
src/timecode/: generator.rs  ltc.rs  mod.rs  mtc.rs  types.rs
src/ws/: hub.rs
static/: brand.html  index.html
static/css/: base.css  manage.css  modals.css  settings.css  shell.css  show.css  variables.css
static/docs/: API.md  ARCHITECTURE.md  COMPONENTS.md  FRONTEND.md
static/js/: api.js  auth.js  i18n.js  import-export.js  manage.js  settings.js  show.js  state.js  timeline.js  ui-helpers.js
static/lang/: en.json  he.json
tests/: api.rs
